# CaliforniaPrizePrediction

./: README.md  main.py  pyproject.toml
backend/: .debug_check_model.py.bak  .debug_test_prediction.py.bak  README.md  main.py  requirements.txt
