[project]
name = "californiaprizeprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "streamlit>=1.52.2",
    "xgboost>=3.1.2",
]
